# Real_Time_Video_Streaming_Object_Detection

./: README.md
udp-image-streaming-client/: CMakeCache.txt  CMakeLists.txt  Client.cpp  Makefile  README.md  client  cmake_install.cmake  config.h  data.txt  object_detection.py
udp-image-streaming-server/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Server.cpp  cmake_install.cmake  config.h  data.txt  server
udp-image-streaming-server/Audio/: labels.py  labels1.txt
